// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the UIText component should render a loading state 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "paddingBottom": 18,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 16,
          "marginVertical": 5,
          "width": "85%",
        }
      }
    />
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 16,
          "marginVertical": 5,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 16,
          "marginVertical": 5,
          "width": "75%",
        }
      }
    />
  </View>,
]
`;

exports[`the UIText component should render correctly 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "paddingBottom": 18,
      }
    }
  >
    <Text>
      But I, brothers, could not address you as spiritual people, but as
              people of the flesh, as infants in Christ. I fed you with milk, not
              solid food, for you were not ready for it. And even now you are not
              yet ready, for you are still of the flesh. For while there is jealousy
              and strife among you, are you not of the flesh and behaving only in a
              human way? For when one says, "I follow Paul," and another, "I follow
              Apollos," are you not being merely human?
    </Text>
  </View>,
]
`;
